<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E8097"
    tools:context=".geraralerta">

    <Button
        android:id="@+id/btncriaral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:layout_marginBottom="305dp"
        android:onClick="CAlert"
        android:text="@string/criarbtntxt"
        app:backgroundTint="#00C6BC76"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alerta_texto" />

    <Spinner
        android:id="@+id/campus_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/txtipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txcampus" />

    <Spinner
        android:id="@+id/tipo_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/txbloco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtipo" />

    <Spinner
        android:id="@+id/bloco_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/txandar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbloco" />

    <Spinner
        android:id="@+id/andar_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/txsala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txandar" />

    <Spinner
        android:id="@+id/sala_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/alertatx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txsala" />

    <EditText
        android:id="@+id/alerta_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btncriaral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertatx" />

    <TextView
        android:id="@+id/alertatx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:text="@string/alertatx"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/alerta_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sala_spinner" />

    <TextView
        android:id="@+id/txcampus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="306dp"
        android:layout_marginRight="306dp"
        android:text="@string/txcampus"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/campus_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="330dp"
        android:layout_marginRight="330dp"
        android:text="@string/txtipo"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tipo_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campus_spinner" />

    <TextView
        android:id="@+id/txbloco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="322dp"
        android:layout_marginRight="322dp"
        android:text="@string/txbloco"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bloco_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipo_spinner" />

    <TextView
        android:id="@+id/txandar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:text="@string/txandar"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/andar_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloco_spinner" />

    <TextView
        android:id="@+id/txsala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:text="@string/txsala"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/sala_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/andar_spinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="31dp"
        android:text="Emitir Alerta"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/campus_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>