<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E8097"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:minWidth="120dp"
        android:minHeight="120dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/cond" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:layout_marginBottom="20dp"
        android:text="Bem Vindo, Carlos!"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="27dp"
        android:background="#256D81"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/bcriar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:onClick="funcalerta"
            android:text="@string/botao1"
            app:backgroundTint="#00000000"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/bconsulta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="funcconsulta"
            android:text="@string/botao2"
            app:backgroundTint="#00000000"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/bconfig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:onClick="funcconfig"
            android:text="@string/botao3"
            app:backgroundTint="#00000000"
            app:cornerRadius="100dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>